# service-desk-api

./: .env.example  .gitignore  README.md  RUN.md  go.mod  go.sum  main.go  test.md
api/: handler.go  logger.go  router.go  webhook.go
config/: config.go  mcp_endpoints.yml  required_fields.yml  routing.yml
db/: db.go  jobs.go  jobstatus.go
db/migrations/: 00001_jobs.sql  00002_processed_issues.sql  00003_jobs_issue_key_unique.sql
documents/: service-desk-implementation-plan.md  service-desk-poc-tech-spec.md
service-desk-crew/: README.md  pyproject.toml
service-desk-crew/src/service_desk_crew/: crew.py  flow.py  main.py  repo_config.py  repo_paths.py
service-desk-crew/src/service_desk_crew/config/: agents.yaml  llm_factory.py  tasks.yaml
service-desk-crew/src/service_desk_crew/tools/: __init__.py  diagnostics_stub.py  jira.py  mcp_k8s.py
test/k8s/: failing-deployment.yaml
worker/: __init__.py  config.py  logger.py  requirements.txt  run.py
worker/tools/: __init__.py  jira.py
